# last-report

./: .gitignore  CMakeLists.txt  FEATURE_DEMO.md  INSTALL.md  README.md  SUMMARY.md  TESTING.md  USER_GUIDE.md  check_webengine.sh  last-report.pro  mahjongcalculator.cpp  mahjongcalculator.h  mahjongcalculator_standalone.cpp  mahjongcalculator_standalone.h  setup_api_key.bat  setup_api_key.sh  test_calculator.cpp  test_calculator_standalone.cpp  widget.cpp  widget.h  widget.ui  widget_old.cpp
